# pr2_reachability_map_visualization

./: CMakeLists.txt  package.xml
include/reachability_map/: or_bridge_problem.hpp  reachability_map_problem.hpp
scripts/: all find IK solution.txt  another_set_tran_conf.tt  conf_list.txt  joint_index_list.txt  pr2_right_arm_5cm_0202_col.rmg  pr2_right_arm_5cm_1202.rmg  pr2_right_arm_5cm_1207.rmg  print_all_orientation.py  test.csv  test.rmg  test2.rmg  test_reachability.py  test_reachability.py~  transform.txt
src/link_grids/: grid_creation.py  test_points.py  view_samples.py  voxelize_arm.py  voxelize_cpp.py
src/link_grids/Human/: rHand.csv  rHumerus.csv  rRadius.csv
src/link_grids/human_large/: rHand.csv  rHumerus.csv  rRadius.csv
src/link_grids/pr2/: r_elbow_flex_link.csv  r_forearm_link.csv  r_gripper_l_finger_link.csv  r_gripper_r_finger_link.csv  r_shoulder_lift_link.csv  r_upper_arm_link.csv  r_wrist_roll_link.csv
src/link_grids/pr2_arm_only/: r_forearm_roll_link.csv  r_gripper_l_finger_tip_link.csv  r_gripper_palm_link.csv  r_gripper_r_finger_tip_link.csv  r_shoulder_pan_link.csv  r_upper_arm_link.csv  r_wrist_flex_link.csv
src/link_grids/pr2_large/: r_elbow_flex_link.csv  r_forearm_link.csv  r_forearm_roll_link.csv  r_gripper_l_finger_link.csv  r_gripper_l_finger_tip_link.csv  r_gripper_palm_link.csv  r_gripper_r_finger_link.csv  r_gripper_r_finger_tip_link.csv
src/link_grids/pr2_large_backup/: r_gripper_l_finger_link.csv  r_gripper_l_finger_tip_link.csv  r_gripper_palm_link.csv  r_gripper_r_finger_link.csv  r_gripper_r_finger_tip_link.csv  r_upper_arm_link.csv  r_wrist_flex_link.csv  r_wrist_roll_link.csv
src/reachability_map/: reachability_map_main.cpp  reachability_map_problem.cpp
